--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -19,6 +19,7 @@
             border: none;
             background: none;
             cursor: pointer;
+            color: $sub-info-color;
         }
     }
     &__register {
@@ -39,6 +40,7 @@
             border: none;
             background: none;
             cursor: pointer;
+            color: $sub-info-color;
             span {
                 width: 40px;
                 height: 40px;
@@ -61,6 +63,7 @@
             border-radius: 5px;
             transition: all .2s ease;
             cursor: pointer;
+            color: $sub-info-color;
             &:hover {
                 background: $pr-color;
                 color: #fff;
