--- a/scss/_offers.scss
+++ b/scss/_offers.scss
@@ -22,6 +22,7 @@
         }
     }
     &__cards-wrapper {
+        width: 100%;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         justify-content: center;
@@ -29,6 +30,7 @@
         margin-top: 40px;
         padding-bottom: 20px;
         &__card {
+            width: 100%;
             background: #fff;
             border: 1px solid #F2F2F2;
             padding: 20px 10px 10px;
@@ -75,6 +77,8 @@
                 }
             }
             &__title {
+                width: 100%;
+                max-width: 250px;
                 font-weight: 700;
                 font-size: 16px;
                 color: $title-color;
