--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    font-family: 'Gotham Pro';
 }
 
 html {
@@ -13,7 +14,6 @@ html {
 
 body {
     height: 100%;
-    font-family: "Gotham Pro Regular";
 }
 
 .container {
