--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,5 @@
+@import "./typagrah";
+
 @import "./varibles";
 
 @import "./reset";
@@ -12,3 +14,5 @@
 @import "./filter";
 @import "./detail";
 @import "./menu";
+@import "./buy";
+@import "./cabinet";
